v2.1:
- Can host and connect without port forward. It is still recommended to port forward if possible,
  since the initial connect will be faster, and it will probably be more stable.
- In-game button config with player selection:
  Toggle with F4 or start button on any controller with start mapped.
  Can move controllers left or right to switch players.
- Linux / Wine support with some features disabled:
  No in-game button config unless someone can figure out how to hook DirectX9 under Wine.
  Can't save replays because MBAA.exe crashes when saving replays even when running by itself.
  Note you'll need to create a 32bit Wine prefix see: http://askubuntu.com/a/257505
- Command line options

v2.0d:
- Fixed a bug that sometimes causes weird inputs

v2.0c:
- Optimizations
- Added a lite version:
  Disables spectators (but can still spectate)
  Can't cancel out of host or join
  Everything else still works the same
  Try this version if you get slow downs
- Enables the disabled stages (thanks to Erkz for the memory locations)

v2.0b:
- Separate spectate only option, netplay option still works same as before
- Display both player names when spectating

v2.0a:
- Fixed the freeze that happens when spectating training mode
- Offline training mode reset button enhancement
  Tap reset + left/right to go to either corner (with gap)
  Hold reset + left/right makes player 1 go into the corner
  Hold down reset to go to player 2 starting position

v2.0:
New features:
- Replay saving works now
- Brand new interface
- Spectator mode
- Broadcast offline versus mode or training mode
- Netplay training mode
- Offline training mode with delay
- Better retry menu:
  Each side chooses their own retry option independently
  Can also manually save replays first
  Only chooses once again if both sides chose once again
  Note: once you make a selection, the game waits until the other side chooses something or exits
- Notification when someone connects (can be disabled):